components/default/audiobookshelf/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app audiobookshelf
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://ab.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/audiobookshelf.png
    external-dns.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
spec:
  parentRefs:
    - name: ${GATEWAY_EXTERNAL}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["ab.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: *app
          port: 80
